--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_reminder.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_reminder.xml
@@ -50,15 +50,14 @@
                     app:srcCompat="@drawable/userimage" />
 
                 <TextView
-                    android:layout_alignParentLeft="true"
-                    android:layout_margin="10dp"
-                    android:paddingLeft="20dp"
-                    android:layout_below="@+id/UserImage"
-                    android:fontFamily="sans-serif-black"
-                    android:textSize="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Xin chào, Nguyễn Văn Hà" />
+                    android:layout_below="@+id/UserImage"
+                    android:layout_alignParentLeft="true"
+                    android:layout_margin="10dp"
+                    android:textStyle="bold"
+                    android:text="Xin chào, Nguyễn Văn Hà"
+                    android:textSize="16dp" />
 
             </RelativeLayout>
 
@@ -112,7 +111,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="50dp"
                                 android:layout_alignParentLeft="true"
-                                android:layout_centerInParent="true"
+                                android:layout_centerVertical="true"
                                 android:layout_toLeftOf="@id/LinearLichKham1"
                                 app:srcCompat="@drawable/icon_medicine" />
 
